--- a/src/app/my-account/my-account.component.scss
+++ b/src/app/my-account/my-account.component.scss
@@ -13,12 +13,59 @@
     /* Sombra elegante */
 }
 
+.avatar-widget {
+    position: relative;
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.avatar-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+    z-index: 1; // Asegura que la imagen esté por encima del overlay
+}
+
+.avatar-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); // Fondo semitransparente
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2; // Asegura que el overlay esté por encima de la imagen
+    opacity: 1; // Visible por defecto
+    transition: opacity 0.3s ease;
+
+    .fa-camera {
+        color: white;
+        font-size: 24px;
+    }
+}
+
+// Clase para ocultar el overlay cuando hay una imagen cargada
+.show-on-hover {
+    opacity: 0; // Inicialmente invisible
+
+    &:hover {
+        opacity: 1; // Visible al hacer hover
+    }
+}
+
 .card-header {
     text-align: center;
     font-size: 1.2rem;
     background-color: var(--primary-color) !important;
     /* Fondo amarillo */
-    color: var(--formInput-color)!important;
+    color: var(--formInput-color) !important;
     /* Texto negro */
     font-weight: bold;
     border-bottom: 2px solid var(--secondary-color);
