--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @use 'custom-theme' as *;
 /* src/styles.scss */
-@use 'app/services/swal/swal.service.scss' as swal;
+@use 'app/core/services/swal/swal.service.scss' as swal;
 
 
 
