--- a/src/app/crear-atletas/crear-atletas.component.html
+++ b/src/app/crear-atletas/crear-atletas.component.html
@@ -19,7 +19,7 @@
                         </div>
 
                         <div class="col-md-6">
-                            <label for="cedula" class="form-label">Cédula</label>
+                            <label for="cedula" class="form-label">Cédula  (Opcional)</label>
                             <input type="text" id="cedula" class="form-control" formControlName="cedula"
                                 placeholder="Ingrese la cédula" />
                             <div *ngIf="isInvalidField('cedula')" class="text-danger small mt-1">
