--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,111 +1,204 @@
 .fa-rotate-custom {
-    transform: rotate(0deg); /* Posición inicial: flecha apuntando a la izquierda */
-    transition: transform 0.3s ease; /* Movimiento suave */
-  }
-  
-  .fa-rotate-custom-open {
-    transform: rotate(-90deg); /* Flecha girada hacia abajo pasando por el lado izquierdo */
-    transition: transform 0.3s ease;
-  }
-  
+  transform: rotate(0deg);
+  /* Posición inicial: flecha apuntando a la izquierda */
+  transition: transform 0.3s ease;
+  /* Movimiento suave */
+}
 
-  .content-wrapper {
-    background-image: url('/assets/sports-background.jpeg'); /* Ajusta la ruta a tu imagen */
-    background-size: cover; /* Asegúrate de que cubra toda el área */
-    background-repeat: no-repeat; /* Evita que se repita */
-    background-attachment: fixed; /* Mantén la imagen fija al hacer scroll */
-    background-position: center; /* Centra la imagen */
-    min-height: 100vh; /* Asegura que siempre ocupe al menos el alto de la pantalla */
-    padding: 1rem; /* Mantén un margen interno cómodo */
-  }
+.fa-rotate-custom-open {
+  transform: rotate(-90deg);
+  /* Flecha girada hacia abajo pasando por el lado izquierdo */
+  transition: transform 0.3s ease;
+}
+
+
+.content-wrapper {
+  background-image: url('/assets/sports-background.jpeg');
+  /* Ajusta la ruta a tu imagen */
+  background-size: cover;
+  /* Asegúrate de que cubra toda el área */
+  background-repeat: no-repeat;
+  /* Evita que se repita */
+  background-attachment: fixed;
+  /* Mantén la imagen fija al hacer scroll */
+  background-position: center;
+  /* Centra la imagen */
+  min-height: 100vh;
+  /* Asegura que siempre ocupe al menos el alto de la pantalla */
+  padding: 1rem;
+  /* Mantén un margen interno cómodo */
+}
 
 /*======================== SIDEBAR ========================*/
 .main-sidebar {
-    background-color: var(--secondary-color) !important; /* Fondo negro */
-    color: var(--primary-color); /* Texto amarillo */
-  }
-  
-  /* Links en el Sidebar */
-  .main-sidebar .nav-sidebar > .nav-item > .nav-link {
-    color: var(--primary-color) !important; /* Color de texto amarillo */
-    
-  }
-  
-  .main-sidebar .nav-sidebar > .nav-item > .nav-link:hover {
-    background-color: var(--primary-color) !important; /* Fondo amarillo en hover */
-    color: #000000 !important; /* Texto negro en hover */
-  }
-  
-  /* Títulos del Sidebar */
-  .main-sidebar .sidebar .nav-header {
-    color: var(--primary-color); /* Amarillo */
-    font-weight: bold;
-    text-transform: uppercase; /* Opcional: Mejora la legibilidad */
-  }
-  
-  /* Ítem Activo */
-  .main-sidebar .nav-sidebar > .nav-item > .nav-link.active {
-    background-color: var(--primary-color) !important; /* Amarillo brillante */
-    color: #000000 !important; /* Texto negro */
-  }
-  
-  /* Imagen o Logo del Sidebar */
-  .brand-link {
-    background-color: var(--secondary-color) !important; /* Fondo negro */
-    color: var(--primary-color) !important; /* Texto amarillo */
-  }
-  
- /* .brand-link:hover {
+  background-color: var(--secondary-color) !important;
+  /* Fondo negro */
+  color: var(--primary-color);
+  /* Texto amarillo */
+}
+
+/* Links en el Sidebar */
+.main-sidebar .nav-sidebar>.nav-item>.nav-link {
+  color: var(--primary-color) !important;
+  /* Color de texto amarillo */
+
+}
+
+.main-sidebar .nav-sidebar>.nav-item>.nav-link:hover {
+  background-color: var(--primary-color) !important;
+  /* Fondo amarillo en hover */
+  color: #000000 !important;
+  /* Texto negro en hover */
+}
+
+/* Títulos del Sidebar */
+.main-sidebar .sidebar .nav-header {
+  color: var(--primary-color);
+  /* Amarillo */
+  font-weight: bold;
+  text-transform: uppercase;
+  /* Opcional: Mejora la legibilidad */
+}
+
+/* Ítem Activo */
+.main-sidebar .nav-sidebar>.nav-item>.nav-link.active {
+  background-color: var(--primary-color) !important;
+  /* Amarillo brillante */
+  color: #000000 !important;
+  /* Texto negro */
+}
+
+/* Imagen o Logo del Sidebar */
+.brand-link {
+  background-color: var(--secondary-color) !important;
+  /* Fondo negro */
+  color: var(--primary-color) !important;
+  /* Texto amarillo */
+}
+
+/* .brand-link:hover {
     background-color: var(--primary-color) !important; 
     color: var(--secondary-color) !important; 
   }*/
-  
-  /* Sombra (Opcional) */
-  .main-sidebar {
-    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5); /* Añade separación visual */
-  }
 
- 
+/* Sombra (Opcional) */
+.main-sidebar {
+  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5);
+  /* Añade separación visual */
+}
+
+
 /*======================== NAVBAR ========================*/
 .main-header {
-    background-color: var(--secondary-color) !important; /* Fondo negro */
-    border-bottom: 2px solid var(--primary-color); /* Borde amarillo en la parte inferior */
-    color: var(--primary-color); /* Texto amarillo */
-  }
-  
-  /* Links dentro del Navbar */
-  .main-header .nav-link {
-    color: var(--primary-color) !important; /* Texto amarillo */
-    font-weight: bold;
-  }
-  
-  .main-header .nav-link:hover {
-    background-color: var(--primary-color) !important; /* Fondo amarillo en hover */
-    color: var(--secondary-color) !important; /* Texto negro en hover */
-  }
-  
-  /* Íconos del Navbar */
-  .main-header .fas {
-    color: var(--primary-color) !important; /* Íconos amarillos */
-  }
+  background-color: var(--secondary-color) !important;
+  /* Fondo negro */
+  border-bottom: 2px solid var(--primary-color);
+  /* Borde amarillo en la parte inferior */
+  color: var(--primary-color);
+  /* Texto amarillo */
+}
+
+/* Links dentro del Navbar */
+.main-header .nav-link {
+  color: var(--primary-color) !important;
+  /* Texto amarillo */
+  font-weight: bold;
+}
+
+.main-header .nav-link:hover {
+  background-color: var(--primary-color) !important;
+  /* Fondo amarillo en hover */
+  color: var(--secondary-color) !important;
+  /* Texto negro en hover */
+}
+
+/* Íconos del Navbar */
+.main-header .fas {
+  color: var(--primary-color) !important;
+  /* Íconos amarillos */
+}
 
 /*======================== FOOTER ========================*/
 .main-footer {
-    background-color: var(--secondary-color) !important; /* Fondo negro */
-    color: var(--primary-color); /* Texto amarillo */
-    border-top: 2px solid var(--primary-color); /* Borde amarillo en la parte superior */
-  }
-  
-  /* Links en el Footer */
-  .main-footer a {
-    color: var(--primary-color); /* Amarillo para los enlaces */
+  background-color: var(--secondary-color) !important;
+  /* Fondo negro */
+  color: var(--primary-color);
+  /* Texto amarillo */
+  border-top: 2px solid var(--primary-color);
+  /* Borde amarillo en la parte superior */
+}
+
+/* Links en el Footer */
+.main-footer a {
+  color: var(--primary-color);
+  /* Amarillo para los enlaces */
+  font-weight: bold;
+}
+
+.main-footer a:hover {
+  color: var(--secondary-color);
+  /* Texto negro en hover */
+  background-color: var(--primary-color);
+  /* Fondo amarillo en hover */
+}
+
+/*======================== MODAL ========================*/
+.modal-header {
+  background-color: var(--primary-color);
+  color: black;
+
+  .modal-title {
     font-weight: bold;
   }
-  
-  .main-footer a:hover {
-    color: var(--secondary-color); /* Texto negro en hover */
-    background-color: var(--primary-color); /* Fondo amarillo en hover */
-  }
-  
-  
-  
+}
+
+.modal-footer,
+.modal-body {
+  background-color: var(--secondary-color);
+  color: var(--text-color);
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* Centra verticalmente */
+  height: 100%;
+  /* Asegura que ocupe toda la altura del modal */
+}
+
+.modal-body {
+  text-align: center;
+  height: 80px;
+  align-content: center;
+  /* Centra horizontalmente el contenido */
+}
+
+/* Botón de guardar */
+button.btn-success {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+button.btn-success:hover {
+  background-color: #e6c200;
+  /* Fondo amarillo más oscuro */
+  color: #000000;
+  box-shadow: 0 4px 8px rgba(255, 215, 0, 0.4);
+  /* Sombra al pasar el mouse */
+  transform: scale(1.05);
+  /* Efecto de agrandamiento */
+}
+
+button.btn-success:active {
+  background-color: #cba800;
+  transform: scale(0.98);
+  /* Efecto de clic */
+}
