Ajustes seguridad/interceptor token/ peticion http en modulo de cambio de contrase;a pre y postlogin

--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -126,7 +126,7 @@
 
                             <div class="text-right">
                                 <button type="button" class="btn btn-success" [disabled]="!formValid"
-                                    (click)="openModal('otpModal')">
+                                    (click)="initiatePasswordChange()">
                                     Cambiar Contraseña
                                 </button>
                             </div>
